[gd_scene load_steps=3 format=3 uid="uid://vfnahpv3n1ei"]

[ext_resource type="Script" uid="uid://bedrn54ubs1hr" path="res://scripts/ui/UpgradeMenu.gd" id="1_q8dwd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gthpd"]
bg_color = Color(0.2, 0.2, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="UpgradeMenu" type="Panel"]
custom_minimum_size = Vector2(600, 400)
offset_right = 600.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gthpd")
script = ExtResource("1_q8dwd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Улучшения"
horizontal_alignment = 1

[node name="CategoryButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Samogon" type="Button" parent="VBoxContainer/CategoryButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Самогон"

[node name="Beer" type="Button" parent="VBoxContainer/CategoryButtons"]
layout_mode = 2
toggle_mode = true
text = "Пиво"

[node name="Wine" type="Button" parent="VBoxContainer/CategoryButtons"]
layout_mode = 2
toggle_mode = true
text = "Вино"

[node name="Garage" type="Button" parent="VBoxContainer/CategoryButtons"]
layout_mode = 2
toggle_mode = true
text = "Мастерская"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"
